language_tests/source_files/invalid/mod_in_root.tr
// `mod` declarations are not allowed in the package root.
public mod root;

func main() {}
